Missing files from initial commit

--- a/CASHMastersRegister/appsettings.json
+++ b/CASHMastersRegister/appsettings.json
@@ -1,9 +1,43 @@
 {
+    "CashRegisterConfiguration" : {
+        "DenominationOptions" : {
+            "CurrentDenomination" : "USA",
+            "ConfiguredDenominations" : {
+                "USA": [
+                    0.01,
+                    0.05,
+                    0.10,
+                    0.25,
+                    0.50,
+                    1.00,
+                    2.00,
+                    5.00,
+                    10.00,
+                    20.00,
+                    50.00,
+                    100.00
+                ],
+                "Mexico": [
+                    0.05,
+                    0.10,
+                    0.20,
+                    0.50,
+                    1.00,
+                    2.00,
+                    5.00,
+                    10.00,
+                    20.00,
+                    50.00,
+                    100.00
+                ]
+            }
+        }
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
+            "System": "Debug",
+            "Microsoft": "Debug"
         }
     }
 }
